# ChangeLog for net-analyzer/fail2ban
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.43 2008/06/21 11:02:09 bluebird Exp $

  21 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> fail2ban-0.8.2.ebuild:
  Add ~sparc at user request (Guido Winkelmann), bug #228591

  15 Jun 2008; Zac Medico <zmedico@gentoo.org> fail2ban-0.8.0-r1.ebuild,
  fail2ban-0.8.1.ebuild, fail2ban-0.8.2.ebuild:
  Bug #226505 - For compatibility with phase execution order in
  >=portage-2.1.5, call has_version inside pkg_preinst instead of
  pkg_postinst.

  18 Mar 2008; Jeroen Roovers <jer@gentoo.org> fail2ban-0.8.2.ebuild:
  Commit the changes proposed in bug #213796.

*fail2ban-0.8.2 (17 Mar 2008)

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> +fail2ban-0.8.2.ebuild:
  Version bump.

  27 Feb 2008; Cédric Krier <cedk@gentoo.org> files/fail2ban-logrotate,
  fail2ban-0.8.1.ebuild:
  Fix logrotate for bug #207527

  24 Oct 2007; Roy Marples <uberlord@gentoo.org> fail2ban-0.8.1.ebuild:
  Keyworded ~x86-fbsd, #191510.

  25 Sep 2007; Raphael Marichez <falco@gentoo.org>
  +files/fail2ban-logrotate, fail2ban-0.8.1.ebuild:
  Add logrotate script file as from upstream documentation (bug 193745)

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -fail2ban-0.7.9.ebuild,
  -fail2ban-0.8.0.ebuild:
  Cleanup

*fail2ban-0.8.1 (31 Aug 2007)

  31 Aug 2007; Raphael Marichez <falco@gentoo.org> +fail2ban-0.8.1.ebuild:
  Version bump, bug 190852. And adding virtual/mta runtime dependency.

  05 Jul 2007; Raphael Marichez <falco@gentoo.org> fail2ban-0.8.0.ebuild,
  fail2ban-0.8.0-r1.ebuild:
  Conditional elogs for upgrading from 0.6 to 0.8, bug 183743

  23 Jun 2007; Christoph Mende <angelos@gentoo.org>
  fail2ban-0.8.0-r1.ebuild:
  Stable on amd64 wrt bug 181214

  18 Jun 2007; Raphael Marichez <falco@gentoo.org>
  -files/fail2ban-0.7.6.init.d.patch, fail2ban-0.6.2-r1.ebuild,