@@ -5,9 +5,11 @@ DIST fail2ban-0.6.2.tar.bz2 25068 RMD160 6c829fc84d8e41c4daf4b9b1a7e2dd71a54eab0
 DIST fail2ban-0.8.0.tar.bz2 55726 RMD160 16c033a9fbd10a468ac62d6ba31becf5966a5647 SHA1 b48c8ed269dfc6b2901573ac83c9680abb09e342 SHA256 ef60f601a8766128910f08ca5e731782d7ca17c014dcf6ab54982e7ae59bd5f6
 DIST fail2ban-0.8.1.tar.bz2 58321 RMD160 7f695e2efc4af3fe21657a4d1613cd7beeb623ad SHA1 89eee4c31357581dd5d5da7ea4cf28d2717d470a SHA256 3c3adc67c5f2b4fc72c9ea22e52c4cdfd9f901f6c238616416444560f56f6403
 DIST fail2ban-0.8.2.tar.bz2 61534 RMD160 7818d526e1af47fac35edc1d60bf2e6da1253d06 SHA1 f4a41ca782b51f1b5fd579c20ef310004a9974f9 SHA256 9ee445fa4149c7376f75bbda1dbdb48626fbeb29cb8bd0c16509ebfd7f22dc3a
+DIST fail2ban-0.8.3.tar.bz2 64028 RMD160 ba0704371e989ded372915e7cc4b2ec4c46899b2 SHA1 0cb9f058fb93523f0f34e26d324ba4ed6be8248d SHA256 b32fd9ee849bf36d23685a91d1d96f29a2fa383069d7d789e4956c9268dca5cd
 EBUILD fail2ban-0.6.2-r1.ebuild 1280 RMD160 2624e486fcf757f9a90564c775051ba751551c2c SHA1 78f753d0740c3b5f95da72d10fcbe9ce4bbc671d SHA256 260de4a5981fa2df7fdfb03d9df66bbda6751f746451158bd1f73f7ac43c907a
 EBUILD fail2ban-0.8.0-r1.ebuild 1663 RMD160 5051d1c617a1e82bac36839af0c31117b094f887 SHA1 cc1ed4e689b67bc55426e391d6c2b51587d1168f SHA256 9155af4b9a4fc090ad9e292e14db5ad579c694c88212cfabcbe3de1d83e4c470
 EBUILD fail2ban-0.8.1.ebuild 1813 RMD160 7c389a71cf7f4ef93db9aafc70cc7b5d11912d5b SHA1 a561cfe3dc40d535bce2ac904d528f8e7c52347d SHA256 cd11f72ae9d99fa39c7e21878cab6454cde126fe37a7cf90bcea5dcd1fbc0904
 EBUILD fail2ban-0.8.2.ebuild 1634 RMD160 08c07dfc2b794f9e8da8edd564cf441bd9b25a1b SHA1 772a92df5eae8f14c8e3b9ef732e07b1227f4200 SHA256 28790d0db93d586c4a9ba170cd1e579f42447a2f3f75c7f8fce69a5ba2fbda4a
-MISC ChangeLog 7013 RMD160 9cb1e37a1a29a4bc68a9962ca7d2e42f27843914 SHA1 cf878054a65c5a1565d069489e957cacef3edfb3 SHA256 781e70c91276998581aaea231d6d628038d08ecf5bbc78f2936e99bc6746b560
+EBUILD fail2ban-0.8.3.ebuild 1629 RMD160 f1658fc56dc31e4b070e8caa505a68e394bb36c6 SHA1 5769ac437e24c4b42727606801fe3f91032d8425 SHA256 e8551054e1647db34da05718c15e27ff8d31be88311c80ad13de573ee5c3c40e
+MISC ChangeLog 7157 RMD160 87852d269a00cc8ed49666e1264e626993512d5c SHA1 868e11b85ffe787ef805de637c594bbe8684dbcf SHA256 707393a2e0dd8d55fcd16be35e4a8f70799898b0e754c076be1de4aeac07ddd2
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
